--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-spring.application.name=vorstu
+spring.datasource.url=jdbc:postgresql://localhost:5432/StudentsSTP
+spring.datasource.username=postgres
+spring.datasource.password=0814
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
