--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,10 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/StudentsSTP
 spring.datasource.username=postgres
 spring.datasource.password=0814
+
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database=postgresql
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
